[package]
name = "wfc-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.24.4"
glam = "0.22.0"
rand = "0.8.5"
log = "0.4"
simplelog = "0.12.0"
derive_more = {version = "0.99.17", default-features=false, features = [
             "deref",
             "deref_mut",
             "index",
             "index_mut",
             "from",
             "is_variant",
]}
