[package]
name = "wfc-web"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]
[build]
target = "wasm32-unknown-unknown"

[dependencies]
wfc-lib = {path="../wfc-lib"}
image = "0.24.4"
glam = "0.22.0"
rand = "0.8.5"
winit = "0.27"
pixels = "0.11.0"
derive_more = {version = "0.99.17", default-features=false, features = [
             "deref",
             "deref_mut",
             "index",
             "index_mut",
             "from",
             "is_variant",
]}
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat", "Event", "Window", "Document", "HtmlElement"] }
winit_input_helper = "0.13"
