[package]
name = "wfc-web"
version = "0.1.0"
edition = "2021"

[dependencies]
wfc-lib = {path="../wfc-lib"}
image = "0.24.4"
glam = "0.22.0"
winit = "0.27"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat", "Event", "Window", "Document", "HtmlElement", "CssStyleDeclaration"] }
wgpu = {version="0.15", features=["webgl"]}
thiserror = "1.0.40"
